--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">NitroShare</string>
+    <string name="app_name">NitroShare</string> //leave unchanged
 
     <!-- Transfer activity -->
     <string name="activity_transfer_empty_text">No transfers in progress</string>
@@ -17,8 +17,8 @@
     <string name="menu_transfer_item_exit">Exit</string>
 
     <!-- Intro activity -->
-    <string name="activity_intro_intro_title">Introduction</string>
-    <string name="activity_intro_intro_description">NitroShare makes it easy to send files to other devices on your local network.</string>
+    <string name="activity_intro_intro_title">소개</string>
+    <string name="activity_intro_intro_description">NitroShare를 사용하면 로컬 네트워크의 다른 장치로 파일을 쉽게 보낼 수 있습니다.</string>
     <string name="activity_intro_share_title">Sending Files</string>
     <string name="activity_intro_share_description">Send files with NitroShare from other Android applications like Gallery, Google Docs, and Google Photos.</string>
     <string name="activity_intro_desktop_title">Desktop App</string>
