--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,14 +19,13 @@
     <!-- Intro activity -->
     <string name="activity_intro_intro_title">소개</string>
     <string name="activity_intro_intro_description">NitroShare를 사용하면 로컬 네트워크의 다른 장치로 파일을 쉽게 보낼 수 있습니다.</string>
-    <string name="activity_intro_share_title">Sending Files</string>
-    <string name="activity_intro_share_description">Send files with NitroShare from other Android applications like Gallery, Google Docs, and Google Photos.</string>
-    <string name="activity_intro_desktop_title">Desktop App</string>
-    <string name="activity_intro_desktop_description">NitroShare for Android works with the desktop app, which is available for Windows, macOS, and Linux.</string>
-    <string name="activity_intro_desktop_button">Visit Website</string>
-    <string name="activity_intro_perms_title">Permission</string>
-    <string name="activity_intro_perms_description">In order to send and receive files, NitroShare needs your permission to read and write files on your Android device.</string>
-
+    <string name="activity_intro_share_title">파일 보내기</string>
+    <string name="activity_intro_share_description">갤러리, Google 문서 도구 및 Google 포토와 같은 다른 Android 응용 프로그램에서 NitroShare로 파일을 보냅니다.</string>
+    <string name="activity_intro_desktop_title">데스크톱 앱</string>
+    <string name="activity_intro_desktop_description">Android 용 NitroShare는 Windows, macOS 및 Linux에서 사용할 수있는 데스크톱 앱과 호환됩니다.</string>
+    <string name="activity_intro_desktop_button">웹 사이트 방문</string>
+    <string name="activity_intro_perms_title">허가</string>
+    <string name="activity_intro_perms_description">파일을 보내고 받으려면 NitroShare에 Android 장치에서 파일을 읽고 쓸 수있는 권한이 필요합니다.</string>
     <!-- Explorer activity -->
     <string name="activity_explorer">Send Items</string>
     <string name="activity_explorer_internal">Internal Storage</string>
